[project]
name = "skillflow"
version = "0.1.0"
description = "Master any topic with AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "pymongo[srv]>=4.15.3",
    "sentry-sdk[fastapi]>=2.44.0",
    "uvicorn>=0.37.0",
]
